repositories {
    mavenCentral()
}

sourceSets {
    jsonschema {
        java.srcDir 'src/jsonschema/java'
        compileClasspath += sourceSets.main.output
        runtimeClasspath += output + compileClasspath
    }
}

configurations {
    jsonschemaImplementation
    jsonschemaRuntimeOnly
}

dependencies {
    api project(":processor")

    implementation libs.slf4jApi
    api libs.centraldogmaClient
    implementation libs.jacksonCurrentDatabind
    implementation libs.jacksonCurrentDataformatYaml

    testImplementation libs.hamcrest
    testImplementation libs.centraldogmaTestingJunit
    // Necessary to mock final class CentralDogmaRepository for simulating concurrent updates
    testImplementation libs.mockitoInline
    testRuntimeOnly libs.logbackClassic
    testImplementation libs.jsonSchemaValidator

    // For generating JSON Schemas for Decaton ProcessorProperties
    jsonschemaImplementation project(":processor")
    jsonschemaImplementation libs.slf4jApiJsonschema
    jsonschemaImplementation libs.jacksonCurrentDatabind
    jsonschemaImplementation libs.jsonSchemaGenerator
    jsonschemaImplementation libs.therapiRuntimeJavadoc
    jsonschemaRuntimeOnly libs.slf4jSimple
}

def schemaOutDir = file("$projectDir/src/jsonschema/dist")

tasks.named("compileJsonschemaJava", JavaCompile).configure {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
    options.release = 21
}

tasks.register('generateProcessorSchemas', JavaExec) {
    group = 'generation'
    description = 'Generate Decaton ProcessorProperties for Central Dogma JSON Schemas'

    classpath = sourceSets.jsonschema.runtimeClasspath
    mainClass.set('com.linecorp.decaton.centraldogma.jsonschema.ProcessorPropertiesSchemaGenerator')

    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }

    jvmArgs(
            "-Dorg.slf4j.simpleLogger.logFile=System.out",
            "-Dorg.slf4j.simpleLogger.defaultLogLevel=info"
    )
    logging.captureStandardOutput LogLevel.LIFECYCLE

    args schemaOutDir.absolutePath

    outputs.dir schemaOutDir
}

tasks.named('test', Test).configure {
    dependsOn tasks.named('generateProcessorSchemas')
    inputs.dir schemaOutDir

    jvmArgs "-Dnet.bytebuddy.experimental=true"
}

tasks.named('clean') {
    doFirst { delete schemaOutDir }
}
